objects/Requirement__c.object
<CustomObject>
    <fields>
        <fullName>EngineValue__c</fullName>
        <formula>text( ParamNumber__c ) + &apos;;&apos; +  Value__c + if( ISBLANK(Level__c ) ,&apos;&apos;,&apos;;&apos;+ Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EngineValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue__c</fullName>
        <label>MaxValue</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinValue__c</fullName>
        <label>MinValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParamNumber__c</fullName>
        <label>ParamNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <label>Parameter</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RuleScenario__c</fullName>
        <label>RuleScenario</label>
        <referenceTo>RuleScenario__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMinutesOnShift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMinutesOnShift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isOnShiftNow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOnShiftNow</label>
        <type>Checkbox</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parameter__c</columns>
        <columns>Value__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>